@@ -62,6 +62,7 @@ export(read.hyphy)
 export(read.jplace)
 export(read.paml_rst)
 export(read.tree)
+export(rotate)
 export(rtree)
 export(scaleClade)
 export(scale_color)
