@@ -1,0 +1,23 @@
+% Generated by roxygen2 (4.1.1): do not edit by hand
+% Please edit documentation in R/ggtree.R
+\name{rotate}
+\alias{rotate}
+\title{rotate}
+\usage{
+rotate(tree_view, node)
+}
+\arguments{
+\item{tree_view}{tree view}
+
+\item{node}{selected node}
+}
+\value{
+ggplot2 object
+}
+\description{
+rotate 180 degree of a selected branch
+}
+\author{
+Guangchuang Yu
+}
+
