@@ -591,6 +591,17 @@ p3 <- flip(p2, 32, 58)
 grid.arrange(p1, p2, p3, ncol=3)
 ```
 
+## rotate clade
+
+A selected clade can be rotated by 180 degree using __*rotate*__ function.
+
+```{r fig.width=16, fig.height=8, warning=FALSE}
+set.seed(2015-07-01)
+p1 <- ggtree(rtree(30)) + geom_text(aes(label=node))
+p2 <- rotate(p1, 33) %>% hilight(33)
+grid.arrange(hilight(p1, 33), p2, ncol=2)
+```
+
 ## phylopic
 
 [PhyloPic](http://phylopic.org/) is a database that stores reusable silhouette images of organisms. `r Githubpkg("GuangchuangYu/ggtree")` supports downloading images from [PhyloPic](http://phylopic.org/) and annotating phylogenetic tree with the downloaded images.
@@ -800,6 +811,7 @@ A specific slice of the alignment can also be displayed by specific _window_ par
 + [viewing and annotating phylogenetic tree with ggtree](http://ygc.name/2014/12/21/ggtree/)
 + [updating a tree view using %<% operator](http://ygc.name/2015/02/10/ggtree-updating-a-tree-view/)
 + [an example of drawing beast tree using ggtree](http://ygc.name/2015/04/01/an-example-of-drawing-beast-tree-using-ggtree/)
++ [flip and rotate branches in ggtree](http://ygc.name/2015/07/01/flip-and-rotate-branches-in-ggtree/)
 
 # Bugs/Feature requests
 
